platform/observability/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: observability
  namespace: monitoring
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - grafana.aboft.dev
        - prometheus.aboft.dev
        - alertmanager.aboft.dev
      secretName: observability-tls
  rules:
    - host: grafana.aboft.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: kps-grafana
                port:
                  number: 80

    - host: prometheus.aboft.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: kps-kube-prometheus-stack-prometheus
                port:
                  number: 9090

    - host: alertmanager.aboft.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: kps-kube-prometheus-stack-alertmanager
                port:
                  number: 9093
